Revision history for Perl extension Email::MIME.

{{$NEXT}}

1.923     2013-08-08 21:59:02 America/New_York
          do not consider the part-ending CRLF part of the body

          avoid undefined warnings in debug_structure [rt.cpan.org #82388]
          (Thanks, Kurt Anderson)

          better error message when the given body is a ref but not a scalar
          ref [rt.cpan.org #59205]

1.922     2013-07-10 08:45:02 America/New_York
          repackage, fixing version number

1.921     2013-07-01 22:51:01 America/New_York
          repackage, remove PEP links, update bugtracker

1.920     2013-06-17
          do not call parts_set during walk_parts unless the parts have
          actually changed

          When trying to decode a body, fall back to 7bit if the encoding is
          unknown.  Trying to create a new body in an unknown encoding is still
          forbidden.  This should make it easier to handle broken messages
          from "the internet."  ("Content-Transfer-Encoding: n"!?)

1.912_01  2013-04-08
          try to encode headers based on the header structure, if it has one,
          rather than treating the header as a big string in all cases; thanks
          for this work go to Jesse Luehrs

1.911     2012-07-22
          require a newer Email::Simple and cope with its improved line ending
          tweaks

1.910     2011-09-12

          document the header_str arg to ->create more thoroughly (i.e., at
          all)

1.909     2011-09-08

          dial the perl prereq back to 5.8.1 by popular demand... actually

1.908     2011-06-01

          dial the perl prereq back to 5.8.1 by popular demand

1.907     2011-02-02

          require 5.8.5 for sane encoding

          be more lenient with Content-Tranfser-Encoding values; stop at
          semicolons

1.906     2010-10-07
          update our prereq on Test::More to 0.88

1.905     2010-09-06
          fix a long-standing bug that prevent walk_parts from reaching all