@@ -10,7 +10,7 @@ use parent qw(Email::Simple);
 use Carp ();
 use Email::MessageID;
 use Email::MIME::Creator;
-use Email::MIME::ContentType 1.011;
+use Email::MIME::ContentType 1.016; # type/subtype, not discrete/composite
 use Email::MIME::Encode;
 use Email::MIME::Encodings 1.314;
 use Email::MIME::Header;
@@ -282,8 +282,8 @@ sub fill_parts {
   my $self = shift;
 
   if (
-    $self->{ct}{discrete} eq "multipart"
-    or $self->{ct}{discrete} eq "message"
+    $self->{ct}{type} eq "multipart"
+    or $self->{ct}{type} eq "message"
   ) {
     $self->parts_multipart;
   } else {
@@ -329,9 +329,9 @@ sub body_str {
   my $encoding = $self->{ct}{attributes}{charset};
 
   unless ($encoding) {
-    if ($self->{ct}{discrete} eq 'text'
+    if ($self->{ct}{type} eq 'text'
       and
-      ($self->{ct}{composite} eq 'plain' or $self->{ct}{composite} eq 'html')
+      ($self->{ct}{subtype} eq 'plain' or $self->{ct}{subtype} eq 'html')
     ) {
 
       # assume that plaintext or html without ANY charset is us-ascii
@@ -416,7 +416,7 @@ sub filename {
     || $self->{ct}{attributes}{name};
   return $name if $name or !$force;
   return $gcache{$self} = $self->invent_filename(
-    $self->{ct}->{discrete} . "/" . $self->{ct}->{composite});
+    $self->{ct}->{type} . "/" . $self->{ct}->{subtype});
 }
 
 my $gname = 0;
@@ -449,7 +449,7 @@ will remain intact.
 sub content_type_set {
   my ($self, $ct) = @_;
   my $ct_header = parse_content_type($self->header('Content-Type'));
-  @{$ct_header}{qw[discrete composite]} = split m[/], $ct;
+  @{$ct_header}{qw[type subtype]} = split m[/], $ct;
   $self->_compose_content_type($ct_header);
   $self->_reset_cids;
   return $ct;
@@ -658,7 +658,7 @@ sub parts_set {
 
   my $ct_header = parse_content_type($self->header('Content-Type'));
 
-  if (@{$parts} > 1 or $ct_header->{discrete} eq 'multipart') {
+  if (@{$parts} > 1 or $ct_header->{type} eq 'multipart') {
 
     # setup multipart
     $ct_header->{attributes}->{boundary} ||= Email::MessageID->new->user;
@@ -668,13 +668,13 @@ sub parts_set {
       $body .= $part->as_string;
     }
     $body .= "$self->{mycrlf}--$bound--$self->{mycrlf}";
-    @{$ct_header}{qw[discrete composite]} = qw[multipart mixed]
-      unless grep { $ct_header->{discrete} eq $_ } qw[multipart message];
+    @{$ct_header}{qw[type subtype]} = qw[multipart mixed]
+      unless grep { $ct_header->{type} eq $_ } qw[multipart message];
   } elsif (@$parts == 1) {  # setup singlepart
     $body .= $parts->[0]->body;
-    @{$ct_header}{qw[discrete composite]}
+    @{$ct_header}{qw[type subtype]}
       = @{ parse_content_type($parts->[0]->header('Content-Type')) }
-      {qw[discrete composite]};
+      {qw[type subtype]};
     $self->encoding_set($parts->[0]->header('Content-Transfer-Encoding'));
     delete $ct_header->{attributes}->{boundary};
   }
@@ -749,7 +749,7 @@ sub walk_parts {
 
 sub _compose_content_type {
   my ($self, $ct_header) = @_;
-  my $ct = join q{/}, @{$ct_header}{qw[discrete composite]};
+  my $ct = join q{/}, @{$ct_header}{qw[type subtype]};
   for my $attr (sort keys %{ $ct_header->{attributes} }) {
     $ct .= qq[; $attr="$ct_header->{attributes}{$attr}"];
   }
@@ -767,7 +767,7 @@ sub _reset_cids {
   my $ct_header = parse_content_type($self->header('Content-Type'));
 
   if ($self->parts > 1) {
-    if ($ct_header->{composite} eq 'alternative') {
+    if ($ct_header->{subtype} eq 'alternative') {
       my %cids;
       for my $part ($self->parts) {
         my $cid
